[gd_scene load_steps=22 format=3 uid="uid://dq2lvm2wbj8vo"]

[ext_resource type="PackedScene" uid="uid://b5y10bj7f6t7w" path="res://Models/Car/Poessie cat car.glb" id="2_4t57f"]
[ext_resource type="PackedScene" uid="uid://bs2vogjyo6dna" path="res://Tracks/racetrack2.tscn" id="2_ym7ev"]
[ext_resource type="PackedScene" uid="uid://d0vw75u1usdkt" path="res://Scenes/Prefabs/vehicle_body.tscn" id="3_2mvx4"]
[ext_resource type="PackedScene" uid="uid://cb1so1gaenqnh" path="res://Tracks/racetrack1-3.tscn" id="3_ja41c"]
[ext_resource type="Script" path="res://Isak/Goal.gd" id="4_rdvnn"]
[ext_resource type="PackedScene" uid="uid://s8qumlnpsjtx" path="res://Isak/Timer.tscn" id="5_enf4p"]
[ext_resource type="Script" path="res://Louie/CheckpointTracker.gd" id="5_s4ola"]
[ext_resource type="Texture2D" uid="uid://bfjs535uog34y" path="res://Models/Car/Trail 2024-04-23 12_37_20.png" id="7_4tqco"]
[ext_resource type="Script" path="res://Louie/ReloadManager.gd" id="8_jeep8"]
[ext_resource type="Script" path="res://Isak/MapManager.gd" id="9_xatao"]
[ext_resource type="AudioStream" uid="uid://dts7qfla78ane" path="res://Music/Aurgtphappy.wav" id="10_jsgbw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_r70bb"]

[sub_resource type="Sky" id="Sky_r4ja8"]
sky_material = SubResource("ProceduralSkyMaterial_r70bb")

[sub_resource type="Environment" id="Environment_n44sb"]
background_mode = 2
background_energy_multiplier = 2.0
sky = SubResource("Sky_r4ja8")

[sub_resource type="BoxShape3D" id="BoxShape3D_v25g6"]
size = Vector3(1, 29.4424, 62.4586)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_a2v1w"]
friction = 0.0
absorbent = true

[sub_resource type="Curve" id="Curve_y1xuh"]
_data = [Vector2(0, 0.89011), 0.0, 0.0, 0, 0, Vector2(0.391304, 0.681319), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_t0xbg"]
curve = SubResource("Curve_y1xuh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_c4ewb"]
inherit_velocity_ratio = 1.0
gravity = Vector3(0, 10, 0)
damping_max = 10.0
scale_min = 0.0
scale_curve = SubResource("CurveTexture_t0xbg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xtatt"]
transparency = 1
albedo_texture = ExtResource("7_4tqco")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
grow_amount = 2.259

[sub_resource type="PlaneMesh" id="PlaneMesh_i6fr2"]
lightmap_size_hint = Vector2i(12, 12)
material = SubResource("StandardMaterial3D_xtatt")
orientation = 2

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n44sb")

[node name="Maps" type="Node3D" parent="."]

[node name="RaceTrack7" parent="Maps" instance=ExtResource("3_ja41c")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="RaceTrackLVL2_4" parent="Maps" instance=ExtResource("2_ym7ev")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.728, -493.5)

[node name="RaceTrack8" parent="Maps" instance=ExtResource("3_ja41c")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="Poessie cat car" parent="." instance=ExtResource("2_4t57f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -506.517, 243.25, 308.453)

[node name="Goal" type="Area3D" parent="."]
script = ExtResource("4_rdvnn")
totalCheckpoints = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Goal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.01901, 54.2596)
shape = SubResource("BoxShape3D_v25g6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Timer" parent="CanvasLayer" instance=ExtResource("5_enf4p")]

[node name="Vehicle Body" parent="." instance=ExtResource("3_2mvx4")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3.30651, 5.88413, 43.4979)
physics_material_override = SubResource("PhysicsMaterial_a2v1w")
angular_damp = 5.0
brake_force = 1.0
angular_correction_amount = 0.999

[node name="CheckpointTracker" type="Node3D" parent="Vehicle Body"]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, -143.9, 4.70428, -29.5122)
script = ExtResource("5_s4ola")

[node name="GPUParticles3D" type="GPUParticles3D" parent="Vehicle Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.772308, -0.641054)
process_material = SubResource("ParticleProcessMaterial_c4ewb")
draw_pass_1 = SubResource("PlaneMesh_i6fr2")

[node name="MapManager" type="Node3D" parent="."]
script = ExtResource("9_xatao")

[node name="ReloadManager" type="Node3D" parent="."]
script = ExtResource("8_jeep8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_jsgbw")
autoplay = true

[connection signal="body_entered" from="Goal" to="Goal" method="_on_body_entered"]
[connection signal="player_entered" from="Goal" to="CanvasLayer/Timer/Tracker" method="reset"]
[connection signal="player_entered" from="Goal" to="CanvasLayer/Timer/ColorRect" method="_on_goal_player_entered"]
[connection signal="player_entered" from="Goal" to="MapManager" method="switch_map"]

[editable path="CanvasLayer/Timer"]
